--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+html, body {
+  min-height: 100%;
+  background-color: black;
+}
+
 .is-active {
   color: white;
+}
+
+.center {
+  position: absolute;
+  width: 20%;
+  height: 10%;
+  top: 45%;
+  left: 40%;
 }
